# algotrade

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg
algostack/: .gitignore  ALPHA_VANTAGE_ISSUE_SUMMARY.md  BACKTESTING_PLAN.md  DASHBOARD_FIX_PROMPT.md  DASHBOARD_GUIDE.md  ENHANCED_DASHBOARD_STATUS.md  FINAL_ENHANCED_DASHBOARD_STATUS.md  QUICK_START.md  WALKFORWARD_FIX_SUMMARY.md  __init__.py  conftest.py  dashboard.py  dashboard_enhanced.py  dashboard_pandas.py  dashboard_production.py  dashboard_production_v2.py  debug_av_signals.py  debug_backtest_zeros.py  debug_overnight_calculation.py  debug_overnight_drift.py  debug_strategy_issues.py  debug_strategy_signals.py  debug_walkforward.py  detailed_analysis.py  final_error_summary.py  fix_overnight_drift.py  lint_analysis.py  main.py  pandas_indicators.py  pyproject.toml  pytest.ini  quick_install.sh  requirements-dev.txt  requirements-minimal.txt  requirements-no-talib.txt  requirements-pandas.txt  requirements-test.txt  requirements.txt  run_dashboard_wsl.py  run_optimization_tests.py  (+19 more)
algostack/adapters/: __init__.py  av_fetcher.py  ibkr_adapter.py  ibkr_executor.py  paper_executor.py  yf_fetcher.py
algostack/api/: __init__.py  app.py  models.py
algostack/archive/: __init__.py  strategy_validation_bypass.py
algostack/archive/dashboard_versions/: dashboard_alt.py  dashboard_app.py  dashboard_app_simple.py  dashboard_debug.py  dashboard_final.py  dashboard_fixed.py  dashboard_integrated.py  dashboard_minimal.py  dashboard_production.py  dashboard_working.py  start_fixed_dashboard.sh  start_minimal_dashboard.sh  start_working_dashboard.sh
algostack/archive/dashboard_versions_old/: dashboard_production.py  dashboard_production_v2.py
algostack/archive/debug_files/: check_av_data_validity.py  check_imports.py  debug_av_signals.py  debug_av_signals_final.py  debug_av_strategies.py  debug_backtest_zeros.py  debug_overnight_calculation.py  debug_overnight_drift.py  debug_strategy_issues.py  debug_strategy_signals.py  debug_walkforward.py  fix_alpha_vantage_timezone.py  fix_overnight_drift.py  trace_overnight_signals.py
algostack/archive/docs/: ALPHA_VANTAGE_FIX_SUMMARY.md  DASHBOARD_README.md  PANDAS_DASHBOARD_README.md  PANDAS_DASHBOARD_SUMMARY.md  PANDAS_REFACTOR_SUMMARY.md  WSL_NETWORKING_GUIDE.md  code-quality-fixes-summary.md  dashboard_viz_fix_summary.md
algostack/archive/implementation_docs/: BACKTESTING_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  ENHANCED_DASHBOARD_FIXES.md  WALKFORWARD_COMPLETE_FIX.md  strategy_op.md
algostack/archive/scripts/: add_local_bin_to_path.sh  install_talib.sh  run_dashboard_direct.sh  run_dashboard_wsl.py  set_av_key.sh  setup_environment.sh  start_dashboard_v2.sh  start_production_dashboard.sh  wsl_dashboard_fix.sh
algostack/archive/test_files/: run_tests.py  (+16 more)
algostack/backtests/: README.md  __init__.py  run_backtests.py
algostack/cli/: __init__.py  monitor.py
algostack/core/: __init__.py  backtest_engine.py  backtest_metrics.py  data_handler.py  engine.py  executor.py  live_engine.py  memory_manager.py  metrics.py  optimization.py  order_state_sync.py  portfolio.py  risk.py  trading_engine_main.py
algostack/dashboard_versions/: dashboard_alt.py  dashboard_final.py  dashboard_fixed.py  dashboard_integrated.py  dashboard_minimal.py  dashboard_production.py  start_debug_dashboard.sh  start_final_dashboard.sh  start_integrated_dashboard.sh  start_production_dashboard.sh  start_simple_dashboard.sh
algostack/docs/: code-quality-checklist.md  code-quality-improvements-summary.md  code-quality-summary.md  next-steps-roadmap.md
algostack/examples/: ibkr_example.py  ibkr_live_example.py  ibkr_websocket_reconnection_example.py  order_state_sync_example.py  paper_trading_example.py  quick_backtest.py  websocket_client.py
algostack/production_configs/: dashboard_config.json  monitor_paper_trading.py
algostack/results/: AGGRESSIVE_STRATEGY_20250609_013739.json  FUTURES_VOLATILITY_CRUSHER_20250609_015532.json  MY_WINNING_FUTURES_STRATEGY_20250609_015832.json  WINNING_HOURLY_CONFIG_20250609_012822.json  futures_backtest_results_20250609_020936.json
algostack/scripts/: FAST_WINNER.py  WINNING_FUTURES_STRATEGY.py  WINNING_STRATEGY_FINDER.py  aggressive_strategy_finder.py  analyze_market_conditions.py  backtest_futures_momentum.py  backtest_realistic_futures.py  backtest_winning_mean_reversion.py  dashboard_pandas.py  debug_futures_strategy.py  find_monthly_winner.py  find_winning_strategy.py  futures_volatility_crusher.py  hourly_strategy_optimizer.py  mean_reversion_dashboard.py  optimized_futures_strategy.py  optimized_hourly_strategy.py  pandas_indicators.py  simple_monthly_winner.py  strategy_defaults.py  strategy_integration_helpers.py  volatility_crusher_5min.py  walk_forward_winner.py
algostack/strategies/: __init__.py  base.py  futures_momentum.py  hybrid_regime.py  intraday_orb.py  mean_reversion_equity.py  mean_reversion_intraday.py  overnight_drift.py  pairs_stat_arb.py  trend_following_multi.py
algostack/test_files/: mock_imports.py  mock_talib.py  simple_test.py  test_dashboard_integration.py  test_dashboard_viz.py  test_data_connection.py  test_signals.py  test_simple_server.py  test_strategy_signals.py  test_yfinance.py
algostack/test_scripts/: test_hourly_strategy.py  test_mean_reversion_direct.py  test_overnight_strategy.py  test_overnight_strategy_fixed.py  test_single_strategy.py  test_strategy_talib.py  test_talib_complete.py
algostack/test_venv/: pyvenv.cfg
algostack/tests/: README.md  __init__.py  conftest.py  test_alpha_vantage_integration.py  test_backtesting.py  test_data_handler.py  test_enhanced_order_manager.py  test_executor.py  test_ibkr_adapter.py  test_integration.py  test_live_engine.py  test_mean_reversion_strategy.py  test_pandas_indicators.py  test_portfolio_engine.py  test_risk_manager.py  test_strategies.py
algostack/utils/: constants.py  logging.py
algostack/visualization_files/: real_backtest_visualization.py  run_comprehensive_backtest.py  visualized_backtest.py
(+330 files in other folders)
