[metadata]
name = algostack
version = 0.1.0
description = Multi-strategy algorithmic trading framework
author = AlgoStack Team
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas>=2.0.0
    numpy>=1.24.0
    scipy>=1.10.0
    yfinance>=0.2.28
    requests>=2.31.0
    pydantic>=2.0.0
    PyYAML>=6.0
    click>=8.1.0

[options.packages.find]
include = algostack*

[options.entry_points]
console_scripts =
    algostack = main:cli

# Pytest configuration moved to pyproject.toml

[coverage:run]
source = .
omit = 
    */tests/*
    */test_*
    setup.py
    */venv/*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstract

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = False
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True

[flake8]
max-line-length = 120
extend-ignore = E203, E266, E501, W503
max-complexity = 10
exclude = .git,__pycache__,venv,build,dist

[isort]
profile = black
line_length = 120
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[pylint]
max-line-length = 120
disable = 
    C0111,  # missing-docstring
    C0103,  # invalid-name
    R0903,  # too-few-public-methods
    R0913,  # too-many-arguments
    W0212,  # protected-access
    C0301,  # line-too-long

[bandit]
exclude_dirs = /tests/,/venv/
skips = B101  # assert_used